--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Lora:400i|Oswald:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,700|Roboto:300" rel="stylesheet">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,7 +22,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Spotifork</title>
-  <description></description>
+  <meta name="description" content="Your easy way to listen to the latest albums reviewed by Pitchfork">
+  <meta name="keywords" content="Spotify, Pitchfork">
 </head>
 
 <body>
